tests/fixtures/positive/release-engineering/TestOnlyImportInProduction.kt
package com.example.releaseengineering

import io.mockk.mockk

class ProdClass {
    val mock = mockk<String>()
}
