tests/fixtures/negative/release-engineering/TestOnlyImportInProduction.kt
package com.example.releaseengineering

import com.example.util.StringHelper

class ProdClass {
    fun format(s: String): String = StringHelper.format(s)
}
